added back in tictactoe

--- a/templates/tictactoe.html
+++ b/templates/tictactoe.html
@@ -102,6 +102,7 @@
         {% if submit == True %}
         <input type="submit" name="spot" id="submit" value="New Game" style="height:20px; width: 120px; font-size: 15px; transform: translate(-480px, -200px);">
         {% endif %}
+        <input type="submit" name="spot" id="back" value="back" style="width:80px; transform: translate(-700px, -850px);"
 
         <p id="determine" style="transform: translate(650px, -900px);">{{ win }}</p>
     </form>
