--- a/static/styles/wordle.css
+++ b/static/styles/wordle.css
@@ -49,7 +49,7 @@
 }
 
 
-.text1{
+#text1{
 
     font-size: 30px;
     width:30px;
@@ -61,7 +61,7 @@
 
 }
 
-.text2{
+#text2{
     font-size: 30px;
     width:30px;
     height:50px;
@@ -72,7 +72,7 @@
 
 }
 
-.text3{
+#text3{
     font-size: 30px;
     width:30px;
     height:50px;
@@ -82,7 +82,7 @@
     transform: translate(599px, -1872px);
 }
 
-.text4{
+#text4{
     font-size: 30px;
     width:30px;
     height:50px;
@@ -92,7 +92,7 @@
     transform: translate(639px, -1872px);
 }
 
-.text5{
+#text5{
     font-size: 30px;
     width:30px;
     height:50px;
